--- a/site/styles.css
+++ b/site/styles.css
@@ -9,7 +9,7 @@
 	margin: 0;
 	color: var(--text-color);
 	border-color: var(--text-color);
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Helvetica;
 }
 
 .header {
@@ -18,20 +18,36 @@
 	padding-bottom: 10px;
 	padding-top: 10px;
 	border-bottom: 2px solid;
-	display: flex;
 	margin-bottom: 20px;
+	display: flex;
+}
+
+.list-header-title {
+	margin-right: auto;
+	margin-left: 20px;
+	font-weight: 600;
+	font-size: 1.1rem;
 }
 
 .list-header {
-	background-color: var(--header-color);
-	text-align: center;
-	z-index: 1;
-	padding-top: 6px;
-	padding-bottom: 3px;
-	font-weight: 600;
-	font-size: 1.1rem;
+	padding-top: 8px;
+	padding-bottom: 7px;
 	width: 250px;
-	order: -2;
+	height: 20px;
+	order: -1;
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+}
+
+.delete-list {
+	corner-shape: squircle;
+	border-radius: 30px;
+	margin-right: 20px;
+	background-color: var(--text-color);
+	width: 30px;
+	cursor: pointer;
+	order: 1;
 }
 
 .list {
@@ -60,7 +76,6 @@
 	margin-right: 20px;
 	margin-left: 20px;
 	border: 2px solid;
-	overflow: hidden;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -86,7 +101,6 @@
 	border-radius: 30px;
 	margin-right: 10px;
 	background-color: var(--text-color);
-	color: var(--header-color);
 	width: 30px;
 	cursor: pointer;
 }
@@ -97,7 +111,6 @@
 	border-color: var(--text-color);
 	border: 2px solid;
 	width: 220px;
-	text-align: center;
 	corner-shape: squircle;
 	border-radius: 30px;
 	height: 30px;
@@ -107,7 +120,7 @@
 	justify-content: center;
 	align-items: center;
 	font-size: 2rem;
-	order: -1;
+	order: 1;
 	cursor: pointer;
 }
 
