--- a/site/styles.css
+++ b/site/styles.css
@@ -21,6 +21,16 @@
 	display: flex;
 }
 
+.dark-mode-button {
+	corner-shape: squircle;
+	border-radius: 30px;
+	margin-right: 10px;
+	background-color: var(--text-color);
+	width: 30px;
+	cursor: pointer;
+}
+
+
 .list-header-title-container {
 	margin-right: auto;
 	margin-left: 20px;
@@ -39,11 +49,12 @@
 	flex-direction: row;
 }
 
-.delete-list {
+.delete-button {
 	border-radius: 5px;
 	margin-right: 20px;
 	background-color: var(--text-color);
 	width: 30px;
+	height: 20px;
 	cursor: pointer;
 	order: 1;
 }
@@ -97,13 +108,19 @@
 	flex-wrap: nowrap;
 }
 
-.dark-mode-button {
-	corner-shape: squircle;
-	border-radius: 30px;
-	margin-right: 10px;
-	background-color: var(--text-color);
-	width: 30px;
-	cursor: pointer;
+.task {
+	background-color: var(--header-color);
+	color: var(--text-color);
+	border-color: var(--text-color);
+	border: 1px solid;
+	width: 220px;
+	border-radius: 10px;
+	height: 30px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .add-task-button {
